# Frangi-GPU

./: CMakeLists.txt  File.cu  FindTIRA.cmake  Frangi-GPU.cpp  Frangi-GPU.vcxproj  Frangi-GPU.vcxproj.filters  Header.cuh  README.md  brain.ppm  frangi-edited.cpp  frangi-edited.h  frangi.cpp  frangi.cu  frangi.cuh  frangi.h  gpu.cu
x64/Release/: File.cu.cache  File.cu614249868.deps  Frangi-GPU.exe.recipe  Frangi-GPU.iobj  Frangi-GPU.ipdb  frangi.cu-609480477.deps  frangi.cu.cache
x64/Release/Frangi-GPU.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  Frangi-GPU.lastbuildstate  Frangi-GPU.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
